2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	Cache cursors to avoid libXcursor theme lookup overhead.
	Patch by David Alan Gilbert.

	* gdk/gdkcursor.h: Add a GDK_BLANK_CURSOR cursor type.

	* gdk/x11/gdkcursor-x11.c: Cache font cursors and named cursors.

	* gdk/x11/gdkprivate-x11.h:
	* gdk/x11/gdkcdisplay-x11.c: Remove cached cursors when a 
	display if finalized.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 568263 – gtk can't recognize the wrong X Selection TARGETS' 
	type "TARGETS" by java applications

	* gtk/gtkselection.c (gtk_selection_data_get_targets): Accept
	a type of TARGETS instead of ATOM, too. Based on a patch by 
	Peng Wu. 

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 568233 – Wrong statement about GtkEntry's "activate" signal

	* gtk/gtkentry.c:
	* gtk/gtklabel.c:
	* gtk/gtktextview.c: Correct some copy-and-paste mistakes in
	keybinding signal docs. Pointed out by Pascal Terjan.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkentry.[hc]: Add properties and getters for icon tooltips.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 563280 – stock items & translation context

	* gtk/gtkstock.c: Solve the msgctxt problem a bit more
	elegantly, and add some hints about this to the docs of
	gtk_stock_set_translate_func. Proposed by Christian Persch

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 568196 – Please change context of Forward stock label

	* gtk/gtkstock.c: Reinstate separate translation contexts for
	navigation and media labels (these were lost in the transition
	to msgctxt. Pointed out by Gabor Kelemen.

2009-01-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 567887 – gtk_entry_get_storage_type() should be 
	gtk_entry_get_icon_storage_type()

	* gtk/gtk.symbols:
	* gtk/gtkentry.[hc]: Use the last chance to get the api right,
	and rename things for consistency, requested by Murray Cumming. 
	In detail,
	gtk_entry_get_stock -> gtk_entry_get_icon_stock