@@ -3859,12 +3859,11 @@ gdk_window_set_back_pixmap (GdkWindow *window,
  * @window: a #GdkWindow
  * @cursor: a cursor
  *
- * Sets the mouse pointer for a #GdkWindow. Use gdk_cursor_new() or
- * gdk_cursor_new_from_pixmap() to create the cursor.
- * To make the cursor invisible, use gdk_cursor_new_from_pixmap() to create
- * a cursor with no pixels in it. Passing %NULL for the @cursor argument
- * to gdk_window_set_cursor() means that @window will use the cursor of
- * its parent window. Most windows should use this default.
+ * Sets the mouse pointer for a #GdkWindow. Use gdk_cursor_new_for_display() 
+ * or gdk_cursor_new_from_pixmap() to create the cursor. To make the cursor 
+ * invisible, use %GDK_BLANK_CURSOR. Passing %NULL for the @cursor argument 
+ * to gdk_window_set_cursor() means that @window will use the cursor of its 
+ * parent window. Most windows should use this default.
  */
 void
 gdk_window_set_cursor (GdkWindow *window,
