@@ -1,5 +1,10 @@
 2009-01-19  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/gdkcursor.c:
+	* gdk/gdkwindow.c: Update docs on how to create blank cursors.
+
+2009-01-19  Matthias Clasen  <mclasen@redhat.com>
+
 	Cache cursors to avoid libXcursor theme lookup overhead.
 	Patch by David Alan Gilbert.
 
